First prototype version
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,9 @@
 set(SRCS
     main.cpp
+    helper.cpp
 )
 
 qt5_add_resources(RESOURCES ../resources.qrc)
 
-add_executable(mini-qml ${SRCS} ${RESOURCES})
-target_link_libraries(mini-qml Qt5::Core Qt5::Qml Qt5::Widgets)
+add_executable(${CMAKE_PROJECT_NAME} ${SRCS} ${RESOURCES})
+target_link_libraries(${CMAKE_PROJECT_NAME} Qt5::Core Qt5::Qml Qt5::Widgets cgraph gvc)
