cmake: Deploy: Add deploy target
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,6 @@ find_package(Qt5 ${QT_MIN_VERSION} REQUIRED NO_MODULE COMPONENTS
     Widgets
 )
 
+include(cmake/Deploy.cmake)
+
 add_subdirectory(src)
