--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,4 +11,12 @@ include_directories(
 )
 
 add_executable(${CMAKE_PROJECT_NAME} ${SRCS} ${RESOURCES})
-target_link_libraries(${CMAKE_PROJECT_NAME} Qt5::Core Qt5::Qml Qt5::Widgets cgraph gvc)
+target_link_libraries(
+    ${CMAKE_PROJECT_NAME}
+    Qt5::Core
+    Qt5::Qml
+    Qt5::Svg
+    Qt5::Widgets
+    cgraph
+    gvc
+)
