--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,11 @@ jobs:
 
     - name: Build
       run: |
+        export QTDIR=$QT_PLUGIN_PATH/..
+        export LD_LIBRARY_PATH=$QTDIR/lib:$LD_LIBRARY_PATH
+        echo "QT_PLUGIN_PATH: $QT_PLUGIN_PATH"
+        echo "LD_LIBRARY_PATH: $LD_LIBRARY_PATH"
+        echo "QTDIR: $QTDIR"
         cmake -B build && cmake --build build --target deploy
         mv build/${{ matrix.DEPLOY_PATH }} .
 
